# Smart-eCommerce-Intelligence-Pipeline-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.superset  Makefile  README.md  docker-compose.yml  kubeflow_prism_pipeline.yaml  pyproject.toml  requirements.txt  stores.yaml
.github/workflows/: ci.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/diagrams/: pipeline_workflow.mmd  platform_architecture.mmd
notebooks/: eda.ipynb  pipeline_analysis.ipynb
scripts/: deploy_kfp_minikube.sh  kfp_operator_workflow.sh  langchain_summary_demo.py  replay_audit.py  scrapy_spider.py  setup_superset_dashboard.py  shopify_storefront_example.py  targets_candidates.txt  targets_candidates_v2.txt  validate_targets.py  woocommerce_rest_example.py
src/: __init__.py  config.py
src/api/: main.py
superset/: superset_config.py
tests/: test_agents.py  test_agents_plan.py  test_api_analytics.py  test_api_llm.py  test_checkpoint.py  test_cleaning.py  test_cluster_metrics.py  test_config.py  test_dashboard_stripped.py  test_dq_step.py  test_duckdb_client.py  test_features.py  test_kfp_pipeline.py  test_llm.py  test_mcp.py  test_minio_client.py  test_minio_upload.py  test_ml.py  test_mlflow_tracking.py  test_model_persistence.py  test_partitioned_output.py  test_pipeline.py  test_pipeline_guard.py  test_rules_vectorized.py  test_schema.py  test_scoring.py  test_scraping_fallbacks.py  test_scraping_logging.py  test_shopify_playwright_conditional.py  test_shopify_retry.py  test_stores_yaml.py  test_superset_config.py  test_validate.py
(+57 files in other folders)
